<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BeaconLib Example</string>
    <string name="app_name_short">Beacons</string>
    <string name="action_settings">Settings</string>

    <string name="scan_interval">Scan Interval (in ms)</string>
    <string name="client_config">Configure Client</string>
    <string name="start_scan">Start Scan</string>
    <string name="stop_scan">Stop Scan</string>

    <string name="beacon_name">Name</string>
    <string name="beacon_address">Address</string>
    <string name="beacon_uuid">UUID</string>
    <string name="beacon_major">Major</string>
    <string name="beacon_minor">Minor</string>
    <string name="beacon_calibration">Calibration RSSI</string>
    <string name="beacon_measured">Measured RSSI</string>

</resources>